--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,19 @@
 body {
     margin: 0;
     font-family: 'Akronim', cursive;
-    background: linear-gradient(135deg, #FF9A8B 0%, #c02ec0 50%, #99d6ff 100%);
+    background: linear-gradient(135deg, #000000 0%, #000000 50%, #000000 100%);
     overflow-x: hidden;
   }
   
   h1, h2 {
     margin: 0;
-    color: #0fe49d;
+    color: #ffffff;
     font-size: 400%;
   }
 
   p {
   margin: 0;
-    color: #58eaf5;
+    color: #ffffff;
     font-size: 200%;
   }
   
@@ -24,7 +24,7 @@ body {
   }
   
   #home {
-    background: linear-gradient(135deg, #12c2e9 0%, #c471ed 50%, #f64f59 100%);
+    background: linear-gradient(135deg, #000000 0%, #000000 50%, #000000 100%);
     height: 100vh;
   }
   
@@ -64,11 +64,11 @@ body {
   }
   
   #about, #features {
-    background: linear-gradient(135deg, #12c2e9 0%, #c471ed 50%, #f64f59 100%);
+    background: linear-gradient(135deg, #000000 0%, #000000 50%, #000000 100%);
   }
   
   #gallery {
-    background: linear-gradient(135deg, #FF9A8B 0%, #c02ec0 50%, #99d6ff 100%);
+    background: linear-gradient(135deg, #000000 0%, #000000 50%, #000000 100%);
   }
   
   .photo-row {
